--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
       </a>
 
       <div class="nav-actions">
-        <a href="{% url 'home' %}" class="btn-top btn-home">🏠 Inicio</a>
+        <a href="{% url 'manual-de-usuario' %}" class="btn-top btn-manual-de-usuario">🏠 Inicio</a>
         <a href="{% url 'home' %}" class="btn-top btn-home">🏠 Inicio</a>
         <button class="btn-top btn-back" type="button" onclick="window.history.back()">← Atrás</button>
       </div>
