Agregamos sidebar arriba

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,8 @@
       </a>
 
       <div class="nav-actions">
-
-        <!-- Acciones (siempre visibles) -->
-        <a href="{% url 'cierre-de-fibra-optica' %}" class="btn-top btn-home">Inicio</a>
-        <a href="{% url 'home' %}" class="btn-top btn-home">Inicio</a>
+        <a href="{% url 'home' %}" class="btn-top btn-home">Manual</a>
+        <a href="{% url 'home' %}" class="btn-top btn-home">🏠 Inicio</a>
         <button class="btn-top btn-back" type="button" onclick="window.history.back()">← Atrás</button>
       </div>
 
