Agregamos sidebar arriba

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
 
       <div class="nav-actions">
         <a href="/c/fibra-optica/" class="btn-top btn-home">🟡 Fibra Óptica</a>
-        <a href="/c/cierre-de-fibra-optica/" class="btn-top btn-home">🟣 Cierre de FO</a>
-        <a href="/c/empalme-de-fibra-optica/" class="btn-top btn-home">🟣 Empalme de FO</a>
+        <a href="/c/cierre-de-fibra-optica/" class="btn-top btn-home">🟤 Cierre de FO</a>
+        <a href="/c/empalme-de-fibra-optica/" class="btn-top btn-home">🔵 Empalme de FO</a>
         <a href="/c/manual-de-usuario/" class="btn-top btn-home">📕 Manual</a>
         <a href="{% url 'home' %}" class="btn-top btn-home">🏠 Inicio</a>
         <button class="btn-top btn-back" type="button" onclick="window.history.back()">← Atrás</button>
